test/should_not_compile/pat.sml
let
    infix X
in
    case () of
        X : {} as Y => print "Not OK"
end;
